--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <meta
+            name="description"
+            content=" The Wilding Foundation supports initiatives that encourage
+        skills development through the creative interplay of
+        technology and art. We are a federally registered charity
+        based on Salt Spring Island, BC"
+        />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>The Wilding Foundation</title>
         <style>
@@ -87,22 +94,36 @@
             <section id="projects">
                 <h2>Projects we support:</h2>
                 <div class="project">
-                    <b>FabLab</b>: A community space for learning and creating
-                    with digital fabrication tools.
                     <a
                         href="https://saltspring.bc.libraries.coop/programs/fablab/"
-                        >Learn more</a
+                        ><b>Fab Lab</b></a
                     >
+                    is a community space for learning and creating with digital
+                    fabrication tools (such as 3D printers and laser cutters).
+                    We also make robotics and STEAM courses free for all kids
+                    ages 6 to 18 on Salt Spring Island through our
+                    <a
+                        href="https://saltspring.bc.libraries.coop/programs/fablab-programming/"
+                        >Child and Youth STEAM programs</a
+                    >. We are the sole funder of these programs, contributing
+                    $200,000 annually.
                 </div>
                 <div class="project">
-                    <b>SSNAP - Salt Spring National Art Prize</b>: celebrating
-                    Canadian visual artists.
-                    <a href="https://saltspringartprize.ca/">Learn more</a>
+                    <a
+                        href="https://saltspringartprize.ca/grants/catalyst-grants/"
+                        ><b>Catalyst Grants:</b></a
+                    >
+                    Far too often an art project remains unfinished because the
+                    artist lacks the funds and resources to complete it. To help
+                    address this problem we created the Catalyst Grants, a
+                    program that provides grants between $3k to $6k to artists
+                    to help them finish their visual art. The Wilding Foundation
+                    is the sole funder of this program, contributing $100,000
+                    annually.
                 </div>
                 <div class="project">
                     <b>Salt Spring Arts Council</b>: Promoting arts and culture
                     on Salt Spring Island.
-                    <a href="https://saltspringarts.com/">Learn more</a>
                 </div>
                 <div class="project">
                     <b>GISS Robotics Club</b>: Encouraging youth to engage in
