Changed a few meta elements

--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <meta name="author" content="Ethan Wilding" />
+        <meta
+            name="keywords"
+            content="Ethan Wilding, Salt Spring Island, charity, philanthropy"
+        />
         <meta
             name="description"
             content=" The Wilding Foundation supports initiatives that encourage
         skills development through the creative interplay of
         technology and art. We are a federally registered charity
-        based on Salt Spring Island, BC"
+        based on Salt Spring Island (BC); it is fully funded by the philanthropic efforts of Ethan Wilding."
         />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>The Wilding Foundation</title>
