--- a/about.html
+++ b/about.html
@@ -451,7 +451,7 @@
                         put his resources to work in a tangible, lasting way.
                         That initial conversation over cookies at a library
                         launch event became the seed that grew the FabLab into
-                        the signifiant community resource that it is today.
+                        the significant community resource that it is today.
                     </p>
                 </div>
             </div>
