fixed another typo

--- a/about.html
+++ b/about.html
@@ -434,13 +434,12 @@
                         In his professional life, he is a founding team member
                         of
                         <a href="https://ethereum.org">Ethereum</a>, where he
-                        served as Resident Philosopher, and co-founder of
-                        <a href="https://ledgerlabs.io">Ledger Labs</a>, one of
-                        Canada&rsquo;s earliest blockchain consulting firms. He
-                        has also served as Chair of the Certified Bitcoin
-                        Professional exam, one of the first not-for-profit
-                        programs to establish a standard body of knowledge in
-                        the field.
+                        served as Resident Philosopher, and co-founder of Ledger
+                        Labs, one of Canada&rsquo;s earliest blockchain
+                        consulting firms. He has also served as Chair of the
+                        Certified Bitcoin Professional exam, one of the first
+                        not-for-profit programs to establish a standard body of
+                        knowledge in the field.
                     </p>
                     <p>
                         After buying property on Salt Spring Island just before
