added opengraph info

--- a/about.html
+++ b/about.html
@@ -9,10 +9,49 @@
         />
         <meta
             name="description"
-            content="About the Wilding Foundation and its founder Ethan Wilding. A federally registered charity based on Salt Spring Island, BC, supporting the creative interplay of technology and art."
+            content="The Wilding Foundation makes creative technology and artistic opportunity accessible to everyone, regardless of age, background, or financial means. Based on Salt Spring Island, we fund the FabLab, youth STEAM programs, GISS Robotics, and Catalyst Grants for artists."
         />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="robots" content="index, follow" />
+        <link rel="canonical" href="https://wilding.org/about.html" />
+
+        <!-- Open Graph -->
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="About - The Wilding Foundation" />
+        <meta property="og:description" content="The Wilding Foundation makes creative technology and artistic opportunity accessible to everyone, regardless of age, background, or financial means. Based on Salt Spring Island, we fund the FabLab, youth STEAM programs, GISS Robotics, and Catalyst Grants for artists." />
+        <meta property="og:url" content="https://wilding.org/about.html" />
+        <meta property="og:image" content="https://wilding.org/img/og-image.png" />
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="630" />
+        <meta property="og:image:alt" content="The Wilding Foundation logo" />
+        <meta property="og:site_name" content="The Wilding Foundation" />
+        <meta property="og:locale" content="en_CA" />
+
+        <!-- Twitter Card -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="About - The Wilding Foundation" />
+        <meta name="twitter:description" content="The Wilding Foundation makes creative technology and artistic opportunity accessible to everyone, regardless of age, background, or financial means. Based on Salt Spring Island, we fund the FabLab, youth STEAM programs, GISS Robotics, and Catalyst Grants for artists." />
+        <meta name="twitter:image" content="https://wilding.org/img/og-image.png" />
+        <meta name="twitter:image:alt" content="The Wilding Foundation logo" />
+
         <title>About - The Wilding Foundation</title>
+
+        <!-- Structured Data -->
+        <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "AboutPage",
+            "name": "About The Wilding Foundation",
+            "url": "https://wilding.org/about.html",
+            "description": "The Wilding Foundation makes creative technology and artistic opportunity accessible to everyone, regardless of age, background, or financial means. Based on Salt Spring Island, we fund the FabLab, youth STEAM programs, GISS Robotics, and Catalyst Grants for artists.",
+            "isPartOf": {
+                "@type": "WebSite",
+                "name": "The Wilding Foundation",
+                "url": "https://wilding.org"
+            }
+        }
+        </script>
+
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -334,11 +373,10 @@
         <nav id="navbar">
             <div class="nav-inner">
                 <ul class="nav-links" id="navLinks">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html#fablab">FabLab</a></li>
-                    <li><a href="index.html#catalyst">Catalyst Grants</a></li>
-                    <li><a href="index.html#robotics">Robotics</a></li>
                     <li><a href="news.html">News</a></li>
+                    <li><a href="index.html#fablab">FabLab</a></li>
+                    <li><a href="index.html#robotics">Robotics</a></li>
+                    <li><a href="index.html#catalyst">Catalyst Grants</a></li>
                     <li><a href="about.html" class="active">About</a></li>
                 </ul>
                 <button class="nav-toggle" id="navToggle" aria-label="Menu">
