--- a/index.html
+++ b/index.html
@@ -9,10 +9,56 @@
         />
         <meta
             name="description"
-            content="The Wilding Foundation supports initiatives that encourage skills development through the creative interplay of technology and art. A federally registered charity based on Salt Spring Island, BC."
+            content="The Wilding Foundation makes creative technology and artistic opportunity accessible to everyone, regardless of age, background, or financial means. Based on Salt Spring Island, we fund the FabLab, youth STEAM programs, GISS Robotics, and Catalyst Grants for artists."
         />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="robots" content="index, follow" />
+        <link rel="canonical" href="https://wilding.org/" />
+
+        <!-- Open Graph -->
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="The Wilding Foundation" />
+        <meta property="og:description" content="The Wilding Foundation makes creative technology and artistic opportunity accessible to everyone, regardless of age, background, or financial means. Based on Salt Spring Island, we fund the FabLab, youth STEAM programs, GISS Robotics, and Catalyst Grants for artists." />
+        <meta property="og:url" content="https://wilding.org/" />
+        <meta property="og:image" content="https://wilding.org/img/og-image.png" />
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="630" />
+        <meta property="og:image:alt" content="The Wilding Foundation logo" />
+        <meta property="og:site_name" content="The Wilding Foundation" />
+        <meta property="og:locale" content="en_CA" />
+
+        <!-- Twitter Card -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="The Wilding Foundation" />
+        <meta name="twitter:description" content="The Wilding Foundation makes creative technology and artistic opportunity accessible to everyone, regardless of age, background, or financial means. Based on Salt Spring Island, we fund the FabLab, youth STEAM programs, GISS Robotics, and Catalyst Grants for artists." />
+        <meta name="twitter:image" content="https://wilding.org/img/og-image.png" />
+        <meta name="twitter:image:alt" content="The Wilding Foundation logo" />
+
         <title>The Wilding Foundation</title>
+
+        <!-- Structured Data -->
+        <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "NGO",
+            "name": "The Wilding Foundation",
+            "url": "https://wilding.org",
+            "logo": "https://wilding.org/img/og-logo.png",
+            "description": "The Wilding Foundation makes creative technology and artistic opportunity accessible to everyone, regardless of age, background, or financial means. Based on Salt Spring Island, we fund the FabLab, youth STEAM programs, GISS Robotics, and Catalyst Grants for artists.",
+            "founder": {
+                "@type": "Person",
+                "name": "Ethan Wilding"
+            },
+            "address": {
+                "@type": "PostalAddress",
+                "addressLocality": "Salt Spring Island",
+                "addressRegion": "BC",
+                "addressCountry": "CA"
+            },
+            "sameAs": []
+        }
+        </script>
+
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
