--- a/news.html
+++ b/news.html
@@ -4,9 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="author" content="Ethan Wilding" />
     <meta name="keywords" content="Wilding Foundation, news, media, Salt Spring Island, FabLab, Catalyst Grants, SSNAP, GISS Robotics" />
-    <meta name="description" content="News and media coverage of the Wilding Foundation and the programs it supports on Salt Spring Island." />
+    <meta name="description" content="The Wilding Foundation makes creative technology and artistic opportunity accessible to everyone, regardless of age, background, or financial means. Based on Salt Spring Island, we fund the FabLab, youth STEAM programs, GISS Robotics, and Catalyst Grants for artists." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://wilding.org/news.html" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="News & Media - The Wilding Foundation" />
+    <meta property="og:description" content="The Wilding Foundation makes creative technology and artistic opportunity accessible to everyone, regardless of age, background, or financial means. Based on Salt Spring Island, we fund the FabLab, youth STEAM programs, GISS Robotics, and Catalyst Grants for artists." />
+    <meta property="og:url" content="https://wilding.org/news.html" />
+    <meta property="og:image" content="https://wilding.org/img/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="The Wilding Foundation logo" />
+    <meta property="og:site_name" content="The Wilding Foundation" />
+    <meta property="og:locale" content="en_CA" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="News & Media - The Wilding Foundation" />
+    <meta name="twitter:description" content="The Wilding Foundation makes creative technology and artistic opportunity accessible to everyone, regardless of age, background, or financial means. Based on Salt Spring Island, we fund the FabLab, youth STEAM programs, GISS Robotics, and Catalyst Grants for artists." />
+    <meta name="twitter:image" content="https://wilding.org/img/og-image.png" />
+    <meta name="twitter:image:alt" content="The Wilding Foundation logo" />
+
     <title>News &amp; Media - The Wilding Foundation</title>
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "CollectionPage",
+        "name": "News & Media",
+        "url": "https://wilding.org/news.html",
+        "description": "The Wilding Foundation makes creative technology and artistic opportunity accessible to everyone, regardless of age, background, or financial means. Based on Salt Spring Island, we fund the FabLab, youth STEAM programs, GISS Robotics, and Catalyst Grants for artists.",
+        "isPartOf": {
+            "@type": "WebSite",
+            "name": "The Wilding Foundation",
+            "url": "https://wilding.org"
+        }
+    }
+    </script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -270,11 +309,10 @@
     <nav id="navbar">
         <div class="nav-inner">
             <ul class="nav-links" id="navLinks">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#fablab">FabLab</a></li>
-                <li><a href="index.html#catalyst">Catalyst Grants</a></li>
-                <li><a href="index.html#robotics">Robotics</a></li>
                 <li><a href="news.html" class="active">News</a></li>
+                <li><a href="index.html#fablab">FabLab</a></li>
+                <li><a href="index.html#robotics">Robotics</a></li>
+                <li><a href="index.html#catalyst">Catalyst Grants</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
             <button class="nav-toggle" id="navToggle" aria-label="Menu">
